@@ -52,7 +52,7 @@ public:
     
     DECLARE_FWOBJECT_SUBTYPE(Network);
 
-    virtual const bool hasInetAddress() const { return true; }
+    virtual bool hasInetAddress() const { return true; }
 
     virtual const Address* getAddressObject() const { return this; }
 
